# stonksfich

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/engine/: evaluation.rs  mod.rs  player.rs  search.rs  tt.rs
src/engines/: mod.rs  simple_engine.rs
src/util/: io.rs  mod.rs  print.rs
